--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -32,6 +32,14 @@
 
 </head>
 <body>
+    <div id="header">
+        <nav>
+            <li class="fork">
+                <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
+                <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
+            </li>
+        </nav>
+    </div>
 
     <h1>This is my 'First' Webpage</h1>
 
