--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -41,7 +41,28 @@
         </nav>
     </div>
 
+    <div class="wrapper">
+        <section>
+            <div id="Title">
+                <h1>Matthew Jones, Software Developer</h1>
+                <hr>
+
+            </div>
+        </section>
+    </div>
+
     <h1>This is my 'First' Webpage</h1>
 
+
+    <div>
+        <span class="credits left">
+            "Built and Maintained by "
+            <a href="https://github.com/mattaousjoneses">Matt Jones</a>
+        </span>
+        <span class="credits right">
+            "Hosted on Github Pages -- Theme by "
+            <a href="https://twitter.com/michigaengraham">Matt Graham</a>
+        </span>    
+    </div>
 </body>
 </html>
