--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -48,6 +48,26 @@
                 <hr>
 
             </div>
+
+            <h2 id="welcome">Welcome to my Github Homepage!</h2>
+            <p id="mydescription">
+                I am a young software developer currently living in the Greater Pittsburgh area in Pennsylvania.
+                I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, PHP, C, C++, and Assembly.
+                Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, Unit Testing / Moq, JQuery / JS Node, ReST API.
+            </p>
+
+            <p>
+                At my current job, <a href="https://windurance.com/">Windurance</a> Software Engineer, I've built a desktop application for .NET 
+                Core using C# that communicates with unsupported power storage units inside wind turbine hubs throughout the U.S., but mostly in Texas.
+                I designed the application from the GUI to bit signal decoding, and was responsible for figuring out what all the signals 
+                the unit would respond to, what those signals meant, and what to send back when.
+                My formal resume, along with LinkedIn and Github pages, are linked at the top - and my general facts / interests below.
+            </p>
+
+            <p>
+
+            </p>
+
         </section>
     </div>
 
