--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -71,16 +71,15 @@
         </section>
     </div>
 
-    <h1>This is my 'First' Webpage</h1>
 
 
     <div>
         <span class="credits left">
-            "Built and Maintained by "
+            Built and Maintained by 
             <a href="https://github.com/mattaousjoneses">Matt Jones</a>
         </span>
         <span class="credits right">
-            "Hosted on Github Pages -- Theme by "
+            Hosted on Github Pages -- Theme by 
             <a href="https://twitter.com/michigaengraham">Matt Graham</a>
         </span>    
     </div>
