--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -30,6 +30,18 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+    <style>
+        body {
+            margin: 0;
+        }
+        main{
+            min-height: calc(100vh-4rem);
+        }
+        footer {
+            height: 4rem;
+        }
+    </style>
+
 </head>
 <body>
     <div id="header">
@@ -53,7 +65,7 @@
             <p id="mydescription">
                 I am a young software developer currently living in the Greater Pittsburgh area in Pennsylvania.
                 I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, PHP, C, C++, and Assembly.
-                Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, Unit Testing / Moq, JQuery / JS Node, ReST API.
+                Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, Unit Testing / Moq, JQuery / JS Node, and ReST API.
             </p>
 
             <p>
@@ -73,7 +85,7 @@
 
 
 
-    <div>
+    <footer>
         <span class="credits left">
             Built and Maintained by 
             <a href="https://github.com/mattaousjoneses">Matt Jones</a>
@@ -82,6 +94,6 @@
             Hosted on Github Pages -- Theme by 
             <a href="https://twitter.com/michigaengraham">Matt Graham</a>
         </span>    
-    </div>
+    </footer>
 </body>
 </html>
