--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -80,7 +80,7 @@
                     <h2 id="welcome">Welcome to my Github Homepage!</h2>
                     <p id="mydescription">
                         I am a young software developer currently living in the Greater Pittsburgh area in Pennsylvania.
-                        I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, PHP, C, C++, and Assembly.
+                        I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, C, C++, and Assembly.
                         Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, Unit Testing / Moq, JQuery / JS Node, and ReST API.
                     </p>
 
@@ -106,6 +106,7 @@
             Built and Maintained by 
             <a href="https://github.com/mattaousjoneses">Matt Jones</a>
         </span>
+        
         <span class="credits right">
             Hosted on Github Pages -- Theme by 
             <a href="https://twitter.com/michigaengraham">Matt Graham</a>
