--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -55,6 +55,10 @@
             line-height: 180%;
             padding: 0 10px;
         }
+
+        
+
+
     </style>
 
 </head>
@@ -78,13 +82,13 @@
                     </div>
 
                     <h2 id="welcome">Welcome to my Github Homepage!</h2>
-                    <p id="mydescription">
+                    <p id="mydescription" style="text-indent: 2em">
                         I am a young software developer currently living in the Greater Pittsburgh area in Pennsylvania.
                         I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, C, C++, and Assembly.
                         Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, Unit Testing / Moq, JQuery / JS Node, and ReST API.
                     </p>
 
-                    <p>
+                    <p style="text-indent: 2em">
                         At my current job, <a href="https://windurance.com/">Windurance</a> Software Engineer, I've built a desktop application for .NET
                         Core using C# that communicates with unsupported power storage units inside wind turbine hubs throughout the U.S., but mostly in Texas.
                         I designed the application from the GUI to bit signal decoding, and was responsible for figuring out what 4-byte messages
@@ -107,7 +111,7 @@
             <a href="https://github.com/mattaousjoneses">Matt Jones</a>
         </span>
         
-        <span class="credits right">
+        <span class="credits right" style="float:right;">
             Hosted on Github Pages -- Theme by 
             <a href="https://twitter.com/michigaengraham">Matt Graham</a>
         </span>    
