--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -94,11 +94,28 @@
                         Core using C# that communicates with unsupported power storage units inside wind turbine hubs throughout the U.S., but mostly in Texas.
                         I designed the application from the GUI to bit signal decoding, and was responsible for figuring out what 4-byte messages
                         the unit would respond to, what the messages back and forth meant, and from there gaining actual functionality as a real-time data representation.
-                        My formal resume, along with LinkedIn and Github pages, are linked at the top - and my general facts, interests, or whatever else below.
+                        My formal resume, along with LinkedIn and Github pages, are linked at the top - and my general facts, interests, or whatever else (will be) below 
+                        (until I have enough to justify different pages).
                     </p>
-
+                    <br />
+                    <h3>References: </h3>
                     <p>
-
+                        It is my pleasure to recommend Matthew Jones, his performance in working as a Software Engineer for Windurance proved that he will be a valuable addition to any company.
+                        I have known Matt for just about a year in my capacity as Director of Engineering at Windurance. Matt has worked for me on various projects as a Software Engineer, 
+                        and has demonstrated he is capable of learning and working independently, and has shown to be a problem-solving asset, even under time constraints.                        
+                        <br />
+                        Paul Rowan
+                        Director of Engineering at Windurance, LLC
+                    </p>
+                    <br />
+                    <p>
+                        Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook! Ook? Ook. Ook? Ook. Ook. Ook. Ook? Ook. 
+                        Ook. Ook. Ook. Ook. Ook. Ook. Ook? Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook? Ook. Ook. Ook. Ook. Ook. Ook. 
+                        Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook? Ook. Ook? Ook. Ook? Ook. Ook? Ook. Ook! Ook! Ook? Ook! Ook. Ook? Ook. 
+                        Ook? Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. 
+                        Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook! Ook. Ook! Ook! Ook! Ook. Ook! Ook! Ook! Ook. Ook. Ook. Ook. Ook. Ook! Ook. Ook! Ook! Ook! Ook.
+                        <br />
+                        Jangles the Monkey
                     </p>
 
                 </section>
@@ -112,7 +129,7 @@
 
         <span id="BMU" class="credits left">
             Built and Maintained by
-            <a href="https://github.com/mattaousjoneses">Matt Jones, Last Updated: </a>
+            <a href="https://github.com/mattaousjoneses">Matt Jones </a>, Last Updated:
         </span>
 
         <span class="credits right" style="float:right;">
