--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -104,8 +104,9 @@
                         I have known Matt for just about a year in my capacity as Director of Engineering at Windurance. Matt has worked for me on various projects as a Software Engineer, 
                         and has demonstrated he is capable of learning and working independently, and has shown to be a problem-solving asset, even under time constraints.                        
                         <br />
-                        Paul Rowan
-                        Director of Engineering at Windurance, LLC
+                        <span style="text-indent: 2em">Paul Rowan</span>
+                        <br />
+                        <span style="text-indent: 2em">Director of Engineering at Windurance, LLC</span>
                     </p>
                     <br />
                     <p>
