--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -76,7 +76,7 @@
             <div class="wrapper">
                 <section>
                     <div id="Title">
-                        <h1>Matthew Jones, Software Developer</h1>
+                        <h1 style="text-align: center">Matthew Jones, Software Developer</h1>
                         <hr>
 
                     </div>
@@ -104,9 +104,9 @@
                         I have known Matt for just about a year in my capacity as Director of Engineering at Windurance. Matt has worked for me on various projects as a Software Engineer, 
                         and has demonstrated he is capable of learning and working independently, and has shown to be a problem-solving asset, even under time constraints.                        
                         <br />
-                        <span style="text-indent: 2em">Paul Rowan</span>
+                        <span style="text-indent: 2em; display: inline-block">Paul Rowan</span>
                         <br />
-                        <span style="text-indent: 2em">Director of Engineering at Windurance, LLC</span>
+                        <span style="text-indent: 2em; display: inline-block">Director of Engineering at Windurance, LLC</span>
                     </p>
                     <br />
                     <p>
@@ -116,7 +116,7 @@
                         Ook? Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. 
                         Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook! Ook. Ook! Ook! Ook! Ook. Ook! Ook! Ook! Ook. Ook. Ook. Ook. Ook. Ook! Ook. Ook! Ook! Ook! Ook.
                         <br />
-                        Jangles the Monkey
+                        <span style="text-indent: 2em; display: inline-block">Jangles the Monkey</span>
                     </p>
 
                 </section>
