--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -69,6 +69,9 @@
                 <li class="fork">
                     <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
+                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/98a3a7884b2f0b0e5f44910599abfb64314f262d/Matthew_Jones_Resume.pdf">
+                        Resume
+                    </a>
                 </li>
             </nav>
         </div>
