--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -73,6 +73,14 @@
                         Resume
                     </a>
                 </li>
+                <li class="downloads">
+                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/raw/main/Matthew_Jones_Resume.pdf">
+                        Resume PDF
+                    </a>
+                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/raw/1b8a61c915a98421e32234239c96839440efd0b3/Matthew_Jones_Resume.docx">
+                        Resume PDF
+                    </a>
+                </li>
             </nav>
         </div>
         <main>
