--- a/MattVSHTMLPage1.html
+++ b/MattVSHTMLPage1.html
@@ -78,7 +78,7 @@
                         Resume PDF
                     </a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/raw/1b8a61c915a98421e32234239c96839440efd0b3/Matthew_Jones_Resume.docx">
-                        Resume PDF
+                        Resume DocX
                     </a>
                 </li>
             </nav>
