--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         Resume DocX
                     </a>
                 </li>
+                <li class="title">Downloads</li>
             </nav>
         </div>
         <main>
