--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
                     <p style="text-indent: 2em">
                         At my current job, <a href="https://windurance.com/">Windurance</a> Software Engineer, I've built a desktop application for .NET
-                        Core using C# that communicates with unsupported power storage units inside wind turbine hubs throughout the U.S., but mostly in Texas.
-                        I designed the application from the GUI to bit signal decoding, and was responsible for figuring out what 4-byte messages
+                        Core using C# that communicates with no-longer-supported power storage units inside wind turbine hubs throughout the U.S., but mostly in Texas.
+                        I designed the application from the GUI to bit signal decoding, and was responsible for ascertaining what 4-byte messages
                         the unit would respond to, what the messages back and forth meant, and from there gaining actual functionality as a real-time data representation.
                         My formal resume, along with LinkedIn and Github pages, are linked at the top - and my general facts, interests, or whatever else (will be) below 
                         (until I have enough to justify different pages).
@@ -121,6 +121,7 @@
                         <span style="text-indent: 2em; display: inline-block">Director of Engineering at Windurance, LLC</span>
                     </p>
                     <br />
+                    <!--
                     <p>
                         Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook! Ook? Ook. Ook? Ook. Ook. Ook. Ook? Ook. 
                         Ook. Ook. Ook. Ook. Ook. Ook. Ook? Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook. Ook? Ook. Ook. Ook. Ook. Ook. Ook. 
@@ -130,6 +131,7 @@
                         <br />
                         <span style="text-indent: 2em; display: inline-block">Jangles the Monkey</span>
                     </p>
+                    -->
 
                 </section>
             </div>
