--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
+
+
     <style>
         body, html, .wrap {
             height: 100%;
         }
 
-            body > .wrap {
+        body > .wrap {
                 height: auto;
                 min-height: 100%;
-            }
+        }
 
-            .wrap:after {
+        .wrap:after {
                 content: "";
                 display: block;
                 height: 100px;
-            }
+        }
 
         .footer {
             background: #662e8c;
@@ -54,19 +56,26 @@
             position: relative;
             line-height: 180%;
             padding: 0 10px;
+
+
         }
 
-        
 
 
     </style>
 
+    <link rel="icon" href="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png" />
+
 </head>
 <body>
-    <div class="wrap" ">
+
+    <div class="wrap">
         <div id="header">
             <nav>
                 <li class="fork">
+                    <a href="https://mattaousjoneses.github.io/">
+                        <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  />
+                    </a>
                     <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf">
