--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <nav>
                 <li class="fork">
                     <a href="https://mattaousjoneses.github.io/">
-                        <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  style="max-height: 36px"/>
+                        <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  style="max-height: 36px; padding: 0px"/>
                     </a>
                     <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
