--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="header">
             <nav>
                 <li class="fork">
-                    <a href="https://mattaousjoneses.github.io/" style="padding: 0px; border: 0px">
+                    <a href="https://mattaousjoneses.github.io/"max-height: 36px; style="padding: 0px; border: 0px">
                         <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  style="max-height: 36px; padding: 0px; border: 0px"/>
                     </a>
                     <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
