--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <div class="wrap">
         <div id="header">
             <nav>
-                <li class="fork">
+                <li class="fork" style="vertical-align: text-top">
                     <a href="https://mattaousjoneses.github.io/"max-height: 36px; style="padding: 0px; border: 0px; vertical-align: bottom">
                         <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  style="max-height: 36px; padding: 0px; border: 0px"/>
                     </a>
-                    <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/mattaousjoneses" >LinkedIn</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf">
                         Resume
