--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
 
     <div class="wrap">
-        <div id="header">
+        <div id="header" style="vertical-align: top">
             <nav>
                 <li class="fork" style="vertical-align: text-top">
                     <a href="https://mattaousjoneses.github.io/"max-height: 36px; style="padding: 0px; border: 0px">
