--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
             padding: 0 10px;
         }
 
-        .header {
-            vertical-align: top;
-        }
 
     </style>
 
@@ -84,9 +81,9 @@
                     <a href="https://mattaousjoneses.github.io/"max-height: 36px; style="padding: 0px; border: 0px">
                         <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  style="max-height: 36px; padding: 0px; border: 0px"/>
                     </a>
-                    <a href="https://www.linkedin.com/in/mattaousjoneses" >LinkedIn</a>
-                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
-                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf">
+                    <a href="https://www.linkedin.com/in/mattaousjoneses" style="vertical-align: text-top">LinkedIn</a>
+                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io" style="vertical-align: text-top">GitHub</a>
+                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf" style="vertical-align: text-top">
                         Resume
                     </a>
                 </li>
