--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <rect y="60" width="100" height="20"></rect>
                     </svg>
                 </label>
-                <li class="fork" style="vertical-align: text-top">
+                <li class="fork">
                     <a href="https://mattaousjoneses.github.io/"max-height: 36px; style="padding: 0px; border: 0px">
                         <img src="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png"  style="max-height: 36px; padding: 0px; border: 0px"/>
                     </a>
