--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             padding: 0 10px;
         }
 
+        #header nav li a {
+            vertical-align: top;
+        }
 
     </style>
 
