--- a/index.html
+++ b/index.html
@@ -63,6 +63,57 @@
             cursor: pointer;
         }
 
+        .nav {
+            &__toggle{
+                         position:absolute;
+                         cursor: pointer;
+                         margin: 0rem 1rem;
+                         right: 0;
+
+                         svg{
+                                width: 1.5rem;
+                                /*fill: SOMETHING*/
+                            }
+
+                            .close{
+                                display:none;
+                            }
+
+                            .menu{
+                                margin-top:0.2rem;
+                            }
+                     }
+
+            &__checkbox{
+                display:none;
+            }
+
+            &__menu{
+                display:flex;
+                flex-direction:column;
+                gap:2rem;
+                align-items:center;
+                margin:1rem;
+            }
+
+            li{
+                list-style:none;
+
+                &:first-child{
+                                 margin-right:auto;
+                                 display: block;
+                             }
+                a{
+                    /*TODO*/
+                }
+
+                svg{
+                    width:1.5rem;
+                    /*fill: SOMETHING*/
+                }
+            }
+        }
+
     </style>
 
     <link rel="icon" href="https://raw.githubusercontent.com/mattaousjoneses/mattaousjoneses.github.io/56c7c3b35e948074a112948d18040cca0af28635/icon.png" />
@@ -72,7 +123,7 @@
 
     <div class="wrap">
         <div id="header" style="vertical-align: top">
-            <nav>
+            <nav class="nav">
                 <!--
                 <input type="checkbox" id="nav__checkbox" class="nav__checkbox" />
                 <label for="nav__checkbox" class="nav__toggle">
@@ -118,7 +169,8 @@
                     <p id="mydescription" style="text-indent: 2em">
                         I am a young software developer currently living in the Greater Pittsburgh area in Pennsylvania.
                         I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, C, C++, and Assembly.
-                        Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, Unit Testing / Moq, JQuery / JS Node, and ReST API.
+                        Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, ReST API, and Unit Testing. 
+                        Currently, I am learning C# Moq, JQuery, and JS Node.
                     </p>
 
                     <p style="text-indent: 2em">
