--- a/index.html
+++ b/index.html
@@ -182,6 +182,21 @@
                         (until I have enough to justify different pages).
                     </p>
                     <br />
+                    <p>
+                        Temporary links as mobile header is broken:
+                        <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>,
+                        <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>,
+                        <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf">
+                            Resume (View)
+                        </a>,
+                        <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/raw/main/Matthew_Jones_Resume.pdf">
+                            Resume PDF
+                        </a>,
+                        <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/raw/main/Matthew_Jones_Resume.docx">
+                            Resume DocX
+                        </a>.
+                    </p>
+                    <br />
                     <h3>References: </h3>
                     <p>
                         It is my pleasure to recommend Matthew Jones, his performance in working as a Software Engineer for Windurance proved that he will be a valuable addition to any company.
