--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         I am a young software developer currently living in the Greater Pittsburgh area in Pennsylvania.
                         I work mostly with C# and Java; but I have experience with <a href="https://www.hackerrank.com/certificates/554ee7c3a84a">SQL</a>, Javascript, C, C++, and Assembly.
                         Also, I am familiar with .NET, <a href="https://courses.edx.org/certificates/9d461593c8164c4f91676185b8a7d41d">Agile Methodologies</a>, Github / Git, ReST API, and Unit Testing. 
-                        Currently, I am learning C# Moq, JQuery, and JS Node.
+                        Currently, I am learning JS Vue, C# Moq, and JS Node.
                     </p>
 
                     <p style="text-indent: 2em">
