--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </a>
                     <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>
                     <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>
-                    <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf">
+                    <a href="https://drive.google.com/file/d/16KwCbyWoiOfYhAShnT-gXrXAWBfbUll8/view?usp=sharing">
                         Resume
                     </a>
                 </li>
@@ -186,7 +186,7 @@
                         Temporary links as mobile header is broken:
                         <a href="https://www.linkedin.com/in/mattaousjoneses">LinkedIn</a>,
                         <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io">GitHub</a>,
-                        <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/blob/main/Matthew_Jones_Resume.pdf">
+                        <a href="https://drive.google.com/file/d/16KwCbyWoiOfYhAShnT-gXrXAWBfbUll8/view?usp=sharing">
                             Resume (View)
                         </a>,
                         <a href="https://github.com/mattaousjoneses/mattaousjoneses.github.io/raw/main/Matthew_Jones_Resume.pdf">
